crates/php-parser/tests/snapshots/integration__single_quoted_non_ascii_with_escaped_quote.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&_result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "String": "hél'lo"
          },
          "span": {
            "start": 6,
            "end": 16
          }
        }
      },
      "span": {
        "start": 6,
        "end": 17
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 17
  }
}
