crates/php-parser/tests/snapshots/integration__spread_operator.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
call(...$args);
$merged = [...$a, ...$b, 1, 2];

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "call"
                },
                "span": {
                  "start": 6,
                  "end": 10
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "args"
                    },
                    "span": {
                      "start": 14,
                      "end": 19
                    }
                  },
                  "unpack": true,
                  "by_ref": false,
                  "span": {
                    "start": 11,
                    "end": 19
                  }
                }
              ]
            }
          },
          "span": {
            "start": 6,
            "end": 20
          }
        }
      },
      "span": {
        "start": 6,
        "end": 22
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "merged"
                },
                "span": {
                  "start": 22,
                  "end": 29
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Array": [
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Variable": "a"
                        },
                        "span": {
                          "start": 36,
                          "end": 38
                        }
                      },
                      "unpack": true,
                      "span": {
                        "start": 33,
                        "end": 38
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Variable": "b"
                        },
                        "span": {
                          "start": 43,
                          "end": 45
                        }
                      },
                      "unpack": true,
                      "span": {
                        "start": 40,
                        "end": 45
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Int": 1
                        },
                        "span": {
                          "start": 47,
                          "end": 48
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 47,
                        "end": 48
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Int": 2
                        },
                        "span": {
                          "start": 50,
                          "end": 51
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 50,
                        "end": 51
                      }
                    }
                  ]
                },
                "span": {
                  "start": 32,
                  "end": 52
                }
              }
            }
          },
          "span": {
            "start": 22,
            "end": 52
          }
        }
      },
      "span": {
        "start": 22,
        "end": 54
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 54
  }
}
