crates/php-parser/tests/snapshots/integration__static_const_error.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result)
---
cannot use 'static' as constant modifier
